--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,6 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "./src/index.ts",
-  "type": "module",
   "scripts": {
     "dev": "nodemon"
   },
@@ -22,8 +21,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.6",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
