--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@reduxjs/toolkit": "^2.1.0",
+    "@tanstack/react-query": "^4.28.0",
+    "axios": "^1.3.4",
     "clsx": "^2.1.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -20,8 +21,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.12.0",
-    "react-redux": "^9.1.0",
-    "sonner": "^1.4.0"
+    "sonner": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
